# asr_kinematic_chain_optimizer

./: CMakeLists.txt  License.txt  README.md  package.xml
include/: config.h  configuration.h  datapairs.h  frame.h  interfaces.h  log.h  optimizer.h  optimizer_container.h  optimizer_gnuplot.h  optimizer_goal.h  optimizer_goal_global.h  optimizer_goal_global_orientation.h  optimizer_goal_global_position.h  optimizer_goal_orientation.h  optimizer_goal_position.h  optimizer_iv.h  optimizer_ros.h  utils.h  value_setter.h  vecmath.h
launch/: CalibrationData.data  MarkerCalibration.data  frames_marker.xml  frames_mild.xml  optimizer.launch
licenses/: third_party_licenses.txt
src/: configuration.cpp  datapairs.cpp  frame.cpp  log.cpp  main.cpp  optimizer.cpp  optimizer_gnuplot.cpp  optimizer_iv.cpp  optimizer_ros.cpp  utils.cpp  vecmath.cpp
