<?xml version="1.0"?>
<package>
  <name>asr_kinematic_chain_optimizer</name>
  <version>1.0.0</version>
  <description>This package calculates the best approximation for a kinematic chain's parameters using rosenbrock optimization. For calculation, a layout of the kinematic chain must be provided, as well as a set of transformations between two frames of the chain that has been acquired during calibration. </description>
  <author>Aumann Florian, Heller Florian, Jäkel Rainer, Wittenbeck Valerij</author>
  <maintainer email="asr-ros@lists.kit.edu">Meißner Pascal</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/asr_kinematic_chain_optimizer</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  
  <run_depend>cmake_modules</run_depend>


  <export>
  </export>
</package>
